--- a/package.xml
+++ b/package.xml
@@ -4,7 +4,7 @@
   <version>0.1.0</version>
   <description>Detect a known-size rectangular room using Generalized Hough Transform from sensor_msgs/LaserScan and visualize in RViz.</description>
 
-  <maintainer email="you@example.com">you</maintainer>
+  <maintainer email="hijimasa@gmail.com">you</maintainer>
   <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
